--- a/code/06_cable_heterosynaptic/prox_vs_distal_tradeoff.ipynb
+++ b/code/06_cable_heterosynaptic/prox_vs_distal_tradeoff.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Do the tradeoff curves look different for arbitrary distributions of cargo:\n",
-    "\n",
-    "* We set each compartment to have a length of 8 microns. Since there are 100 compartments, this results in a 800 micron cable, which is roughly the length of an apical dendrite for a typical pyramidal neuron.\n",
-    "* We examined the effect of manipulating the velocity at the soma within experimentally measured ranges. We report these velocities in $\\mu$m per minute; however, we simulate the model in units of seconds.\n",
-    "* The trafficking rates are constrained so that $a+b=1$, which means that the variance in position increases at a rate of 1 compartment size per second (8 $\\mu m^2$ per second, see code/notebook for figure 1).\n",
-    "    * This has the following interpretation: if we start with a delta function of cargo as an initial condition, then after one second, the distribution of cargo should have a standard deviation of $\\sqrt{8} \\approx 2.8 \\mu m$.\n",
-    "    * This is a conservative estimate, nearly an order of magnitude larger than the diffusion coefficient used in figure 1. Nevertheless, the tradeoff between speed and precision is severe.\n"
+    "## Tradeoff curves for proximal demand, uniform demand, and distal demand in a cable"
    ]
   },
   {
@@ -227,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
