--- a/code/02_steady_state/panel_D.ipynb
+++ b/code/02_steady_state/panel_D.ipynb
@@ -204,9 +204,9 @@
     "    out = list(params[0:(n-1)])\n",
     "    into = list(params[(n-1):2*(n-1)])\n",
     "    \n",
-    "    # Matrices of linear system\n",
-    "    A = np.zeros((n,n))                     # \"drift\" -- trafficking/degradation\n",
-    "    B = np.concatenate(([1],np.zeros(n-1))) # \"input\" -- production at soma\n",
+    "    # Transport model is a linear system: du/dt = A*u\n",
+    "    # Sparsity pattern of matrix A encodes the morphology, entries are the trafficking rates\n",
+    "    A = np.zeros((n,n))\n",
     "    \n",
     "    # Iterative traversal of dendritic tree in pre-order\n",
     "    i = 0\n",
@@ -813,7 +813,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
