--- a/code/05_ca1_heterosynaptic/Fig5.ipynb
+++ b/code/05_ca1_heterosynaptic/Fig5.ipynb
@@ -659,7 +659,7 @@
     "# Distal inputs alone\n",
     "utarg = np.ones(len(seg_list))\n",
     "utarg[260:393] *= 10\n",
-    "utarg[393:] *= 1e-3 # no trafficking to basal dend\n",
+    "utarg[393:] *= 0.1 # no trafficking to basal dend\n",
     "utarg /= np.sum(utarg)\n",
     "\n",
     "# Run simulation\n",
@@ -882,7 +882,7 @@
     "# Distal and Proximal together\n",
     "utarg = np.ones(len(seg_list))\n",
     "utarg[:393] *= 10\n",
-    "utarg[393:] *= 1e-3 # no trafficking to basal dend\n",
+    "utarg[393:] *= 0.1 # no trafficking to basal dend\n",
     "utarg /= np.sum(utarg)\n",
     "\n",
     "# Run simulation\n",
@@ -1116,7 +1116,7 @@
     "# Distal inputs alone\n",
     "utarg = np.ones(len(seg_list))\n",
     "utarg[260:393] *= 10\n",
-    "utarg[393:] *= 1e-3 # no proximal trafficking\n",
+    "utarg[393:] *= 0.1 # no proximal trafficking\n",
     "utarg /= np.sum(utarg)\n",
     "\n",
     "# Run simulation\n",
@@ -1342,7 +1342,7 @@
     "# Distal and Proximal together\n",
     "utarg = np.ones(len(seg_list))\n",
     "utarg[:393] *= 10\n",
-    "utarg[393:] *= 1e-3 # no proximal trafficking\n",
+    "utarg[393:] *= 0.1 # no proximal trafficking\n",
     "utarg /= np.sum(utarg)\n",
     "\n",
     "# Run simulation\n",
@@ -1576,7 +1576,7 @@
     "# Distal inputs alone\n",
     "utarg = np.ones(len(seg_list))\n",
     "utarg[260:393] *= 10\n",
-    "utarg[393:] *= 1e-3 # no proximal trafficking\n",
+    "utarg[393:] *= 0.1 # no proximal trafficking\n",
     "utarg /= np.sum(utarg)\n",
     "\n",
     "# Run simulation\n",
@@ -1802,7 +1802,7 @@
     "# Distal and Proximal together\n",
     "utarg = np.ones(len(seg_list))\n",
     "utarg[:393] *= 10\n",
-    "utarg[393:] *= 1e-3 # no proximal trafficking\n",
+    "utarg[393:] *= 0.1 # no proximal trafficking\n",
     "utarg /= np.sum(utarg)\n",
     "\n",
     "# Run simulation\n",
@@ -1833,7 +1833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
